# HardWorkers

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  LICENSE  README.md  SECURITY.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  run_api.py  run_web.py
agent/: __init__.py  agent.py  workflow.py
agent/tools/: __init__.py  code_analyzer.py  file_io.py
api/: __init__.py  dependencies.py  main.py  middleware.py
api/routers/: __init__.py  auth.py  chats.py  health.py  memory.py  models.py  settings.py  stream.py  workspaces.py
api/schemas/: __init__.py  auth.py  chat.py  memory.py  model.py  settings.py  workspace.py
api/services/: __init__.py  stream_service.py
app/: __init__.py  application.py
backend/: __init__.py
backend/voice/: __init__.py  audio_manager.py  language_service.py  stt.py  tts.py  tts_engine.py
config/: __init__.py  constants.py  settings.py
core/: __init__.py  agent_context.py  agent_runner.py  agent_types.py  container.py  events.py  interfaces.py
core/environment/: __init__.py  models.py  report.py  (+1 more)
database/: __init__.py  connection.py  migrations.py
docs/: ARCHITECTURE.md  BOOT_FLOW.md  CORE_RUNTIME.md  EVENT_BUS.md
experts/: __init__.py  ai_expert.py  base.py  cybersecurity_expert.py  obsidian_expert.py  python_expert.py  review_board.py  technical_architect.py
frontend/: index.html  package.json  tailwind.config.ts  vite.config.ts
knowledge/: __init__.py  backlink_generator.py  concept_analyzer.py  extractor.py  relationship_map.py
memory/: __init__.py  memory_service.py  summarization_service.py
models/: __init__.py  domain.py  enums.py
obsidian/: __init__.py  importer.py  note_generator.py  structure.py  vault.py
qa/: __init__.py  checkers.py  models.py  validator.py
services/: __init__.py  chat_service.py  diagnostics_service.py  workspace_service.py
settings/: __init__.py  models.py  service.py
tests/: __init__.py  test_agent_context.py  test_agent_runner.py  test_agent_types.py  test_audio_manager.py  test_database.py  test_event_types.py  test_immutable_request.py  test_models.py  test_services.py  test_settings.py  test_utils.py  test_voice_tts.py
training/: __init__.py  dataset.py  document_import.py  fine_tune_prep.py  gguf_handler.py  knowledge_extractor.py  lm_studio_adapter.py  lora_config.py  ollama_adapter.py  training_pipeline.py
ui/: __init__.py  helpers.py  main_window.py
utils/: __init__.py  clipboard.py  crypto.py  helpers.py  http_session.py  language.py  logging_setup.py  token_counter.py
vectorstore/: __init__.py  faiss_store.py
vision/: __init__.py  image_processor.py  pipeline.py  vision_model.py
(+106 files in other folders)
