[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hardworkers"
dynamic = ["version"]
description = "AI-powered desktop assistant with semantic memory, multi-model support, voice I/O, vision, and autonomous agents"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "HardWorkres Contributors"},
]
keywords = ["ai", "assistant", "ollama", "chat", "flet", "desktop", "voice", "vision"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Desktop Environment",
]
requires-python = ">=3.11"
dependencies = [
    "flet>=0.85.0",
    "requests>=2.32.0",
    "urllib3>=2.2.0",
    "numpy>=1.26.0",
    "tiktoken>=0.7.0",
    "pillow>=10.4.0",
    "pywin32>=306",
    "pyperclip>=1.11.0",
    "faiss-cpu>=1.8.0",
    "psutil>=6.0.0",
    "SpeechRecognition>=3.10.0",
    "pyttsx3>=2.90",
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    "beautifulsoup4>=4.12.0",
    "pyyaml>=6.0",
    "pytesseract>=0.3.10",
    "cryptography>=42.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.12",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "websockets>=13.0",
    "packaging>=21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]
training = [
    "transformers>=4.36.0",
    "torch>=2.1.0",
    "datasets>=2.16.0",
]
vision = [
    "opencv-python>=4.8.0",
]
voice = [
    "edge-tts>=7.2.0",
]
all = [
    "hardworkers[dev,training,vision,voice]",
]

[project.urls]
Homepage = "https://github.com/yourusername/hardworkers"
Repository = "https://github.com/yourusername/hardworkers"
BugTracker = "https://github.com/yourusername/hardworkers/issues"
Documentation = "https://github.com/yourusername/hardworkers#readme"

[tool.setuptools.packages.find]
where = ["."]
include = [
    "app*",
    "agent*",
    "api*",
    "backend*",
    "config*",
    "core*",
    "database*",
    "experts*",
    "knowledge*",
    "memory*",
    "models*",
    "obsidian*",
    "qa*",
    "services*",
    "settings*",
    "training*",
    "ui*",
    "utils*",
    "vectorstore*",
    "vision*",
]

[tool.setuptools.dynamic]
version = {attr = "config.constants.APP_VERSION"}
